Tom's Feb 2 edits of the mail.ipynb, with Balint's edits of descriptions of figures 1 and 2

--- a/single_capital.ipynb
+++ b/single_capital.ipynb
@@ -27,14 +27,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-06T15:52:48.163000-06:00",
      "start_time": "2020-01-06T21:52:41.881Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mArgumentError: Module Pkg not found in current path.\nRun `Pkg.add(\"Pkg\")` to install the Pkg package.\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mArgumentError: Module Pkg not found in current path.\nRun `Pkg.add(\"Pkg\")` to install the Pkg package.\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1m_require\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Symbol\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:428\u001b[22m\u001b[22m",
+      " [2] \u001b[1mrequire\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Symbol\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:398\u001b[22m\u001b[22m",
+      " [3] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
+     ]
+    }
+   ],
    "source": [
     "# Install and import Necessary packages\n",
     "using Pkg\n",
@@ -125,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-06T15:52:36.972000-06:00",
@@ -253,9 +267,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mUndefVarError: calibration3 not defined\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mUndefVarError: calibration3 not defined\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
+     ]
+    }
+   ],
    "source": [
     "#===========================  CALIBRATION  ====================================#\n",
     "# consumption_investment = 3.1;\n",
@@ -400,15 +426,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.1",
+   "display_name": "Julia 0.6.0",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-0.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.1"
+   "version": "0.6.0"
   },
   "toc": {
    "base_numbering": 1,
