--- a/two_capitals.ipynb
+++ b/two_capitals.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-18T02:51:42.180000-06:00",
@@ -36,45 +36,17 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `C:\\Users\\jiamingwang\\.julia\\environments\\v1.3\\Project.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `C:\\Users\\jiamingwang\\.julia\\environments\\v1.3\\Manifest.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `C:\\Users\\jiamingwang\\.julia\\environments\\v1.3\\Project.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `C:\\Users\\jiamingwang\\.julia\\environments\\v1.3\\Manifest.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `C:\\Users\\jiamingwang\\.julia\\environments\\v1.3\\Project.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `C:\\Users\\jiamingwang\\.julia\\environments\\v1.3\\Manifest.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `C:\\Users\\jiamingwang\\.julia\\environments\\v1.3\\Project.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `C:\\Users\\jiamingwang\\.julia\\environments\\v1.3\\Manifest.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `C:\\Users\\jiamingwang\\.julia\\environments\\v1.3\\Project.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `C:\\Users\\jiamingwang\\.julia\\environments\\v1.3\\Manifest.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n"
+     "ename": "LoadError",
+     "evalue": "\u001b[91mArgumentError: Module Pkg not found in current path.\nRun `Pkg.add(\"Pkg\")` to install the Pkg package.\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mArgumentError: Module Pkg not found in current path.\nRun `Pkg.add(\"Pkg\")` to install the Pkg package.\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1m_require\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Symbol\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:428\u001b[22m\u001b[22m",
+      " [2] \u001b[1mrequire\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Symbol\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:398\u001b[22m\u001b[22m",
+      " [3] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "shock_price (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -171,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-06T15:52:36.972000-06:00",
@@ -372,9 +344,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mcould not open file /Users/tom/Documents/GitHub/Twisted/newsets_utils.jl\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mcould not open file /Users/tom/Documents/GitHub/Twisted/newsets_utils.jl\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1minclude_from_node1\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:569\u001b[22m\u001b[22m",
+      " [2] \u001b[1minclude\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./sysimg.jl:14\u001b[22m\u001b[22m",
+      " [3] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1m./In[3]:9\u001b[22m\u001b[22m [inlined]",
+      " [4] \u001b[1manonymous\u001b[22m\u001b[22m at \u001b[1m./<missing>:?\u001b[22m\u001b[22m",
+      " [5] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
+     ]
+    }
+   ],
    "source": [
     "symmetric_returns    = 0     # 0 for symmetric return case, 1 for asymmetric returns\n",
     "state_dependent_xi   = 2     # 0 for constant twisting function, 1 for twisting beta_tilde, 2 for twsting kappa_tilde; 1 and 2 are state dependent cases\n",
@@ -604,9 +592,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mUndefVarError: Baseline not defined\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mUndefVarError: Baseline not defined\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
+     ]
+    }
+   ],
    "source": [
     "# Initialize model objects -----------------------------------------------------\n",
     "baseline = Baseline(alpha_z_hat, kappa_hat, sigma_z_1cap,\n",
@@ -867,9 +867,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mfunction cumsum does not accept keyword arguments\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mfunction cumsum does not accept keyword arguments\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1mkwfunc\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Any\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./boot.jl:237\u001b[22m\u001b[22m",
+      " [2] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
+     ]
+    }
+   ],
    "source": [
     "#==============================================================================#\n",
     "# Impulse Response Functions and Term structure of uncertainty prices\n",
@@ -954,9 +967,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mUndefVarError: sigma_z_1cap not defined\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mUndefVarError: sigma_z_1cap not defined\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
+     ]
+    }
+   ],
    "source": [
     "results = Dict(\"delta\" => delta,\n",
     "# Single capital\n",
@@ -1033,15 +1058,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.1",
+   "display_name": "Julia 0.6.0",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-0.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.1"
+   "version": "0.6.0"
   },
   "toc": {
    "base_numbering": 1,
