Andrew Feb 3rd: fixed Julia codes

--- a/single_capital.ipynb
+++ b/single_capital.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Twisted Probabilities, Uncertainty, and Prices\n",
-    "by [Lars Peter Hansen](https://larspeterhansen.org/), [Bálint Szőke](https://www.balintszoke.com/), Lloyd S. Han and [Thomas J.Sargent](http://www.tomsargent.com/), you could find the latest draft [here](https://larspeterhansen.org/research/papers/). \n",
+    "by [Lars Peter Hansen](https://larspeterhansen.org/), [Bálint Szőke](https://www.balintszoke.com/), [Lloyd S. Han](https://sites.google.com/site/lloydhan/) and [Thomas J.Sargent](http://www.tomsargent.com/), you could find the latest draft [here](https://larspeterhansen.org/research/papers/). \n",
     "\n",
     "We illustrate effects of concerns about robustness in three environments using a model of capital accumulation with adjustment costs proposed by [Eberly & Wang (2011)](https://www0.gsb.columbia.edu/faculty/nwang/papers/EberlyWang2011_04v3.pdf). We modify their model to expose investment returns  to long-run risks and make investors concerned  about misspecifications of them. Three distinct example economies environments feature:\n",
     "* a single capital stock\n",
@@ -27,28 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-06T15:52:48.163000-06:00",
-     "start_time": "2020-01-06T21:52:41.881Z"
+     "end_time": "2020-02-03T10:00:29.369000-06:00",
+     "start_time": "2020-02-03T16:00:19.275Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mArgumentError: Module Pkg not found in current path.\nRun `Pkg.add(\"Pkg\")` to install the Pkg package.\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mArgumentError: Module Pkg not found in current path.\nRun `Pkg.add(\"Pkg\")` to install the Pkg package.\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1m_require\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Symbol\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:428\u001b[22m\u001b[22m",
-      " [2] \u001b[1mrequire\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Symbol\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:398\u001b[22m\u001b[22m",
-      " [3] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Install and import Necessary packages\n",
     "using Pkg\n",
@@ -60,7 +46,7 @@
     "using Roots\n",
     "using NPZ\n",
     "\n",
-    "include(\"newsets_utils.jl\")"
+    "include(\"./code_new/newsets_utils.jl\")"
    ]
   },
   {
@@ -139,11 +125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-06T15:52:36.972000-06:00",
-     "start_time": "2020-01-06T21:52:36.931Z"
+     "end_time": "2020-02-03T10:00:29.374000-06:00",
+     "start_time": "2020-02-03T16:00:22.372Z"
     }
    },
    "outputs": [],
@@ -267,21 +253,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: calibration3 not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: calibration3 not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-03T10:03:38.823000-06:00",
+     "start_time": "2020-02-03T16:03:38.243Z"
+    },
+    "code_folding": []
+   },
+   "outputs": [],
    "source": [
     "#===========================  CALIBRATION  ====================================#\n",
     "# consumption_investment = 3.1;\n",
@@ -291,7 +271,7 @@
     "\n",
     "\n",
     "A = 0.05\n",
-    "phi = 28\n",
+    "phi = 28.0\n",
     "investment_capital, consumption_investment, alpha_k_hat = calibration3(phi,\n",
     "                                            A, delta, alpha_c_hat, sigma_c)\n",
     "\n",
@@ -318,7 +298,7 @@
     "\n",
     "#=================== Table 1&2 ================================================#\n",
     "kappa_list = [0.01, 0.005];\n",
-    "kappa_list2 = [0.014, 0.01, kappa_tilde];\n",
+    "kappa_list2 = [0.014, 0.01, 0.005];\n",
     "q_list = [0.1, 0.2];\n",
     "\n",
     "store_matrix = zeros(length(kappa_list)+length(kappa_list2)*length(q_list), 25);\n",
@@ -422,19 +402,26 @@
     "end\n",
     "npzwrite(\"./data/model_singlecapital.npz\", vcat(store_matrix, store_matrix2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.6.0",
+   "display_name": "Julia 1.3.1",
    "language": "julia",
-   "name": "julia-0.6"
+   "name": "julia-1.3"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.6.0"
+   "version": "1.3.1"
   },
   "toc": {
    "base_numbering": 1,
@@ -445,7 +432,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": true,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "264px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   },
