--- a/two_capitals.ipynb
+++ b/two_capitals.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Twisted Probabilities, Uncertainty, and Prices\n",
-    "by [Lars Peter Hansen](https://larspeterhansen.org/), [Bálint Szőke](https://www.balintszoke.com/), Lloyd S. Han and [Thomas J.Sargent](http://www.tomsargent.com/), you could find the latest draft [here](https://larspeterhansen.org/research/papers/). \n",
+    "by [Lars Peter Hansen](https://larspeterhansen.org/), [Bálint Szőke](https://www.balintszoke.com/), [Lloyd S. Han](https://sites.google.com/site/lloydhan/) and [Thomas J.Sargent](http://www.tomsargent.com/), you could find the latest draft [here](https://larspeterhansen.org/research/papers/). \n",
     "\n",
     "We illustrate effects of concerns about robustness in three environments using a model of capital accumulation with adjustment costs proposed by [Eberly & Wang (2011)](https://www0.gsb.columbia.edu/faculty/nwang/papers/EberlyWang2011_04v3.pdf). We modify their model to expose investment returns  to long-run risks and make investors concerned  about misspecifications of them. Three distinct example economies environments feature:\n",
     "* a single capital stock\n",
@@ -27,28 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-18T02:51:42.180000-06:00",
-     "start_time": "2020-01-18T08:51:31.553Z"
+     "end_time": "2020-02-03T09:52:08.055000-06:00",
+     "start_time": "2020-02-03T15:51:59.634Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mArgumentError: Module Pkg not found in current path.\nRun `Pkg.add(\"Pkg\")` to install the Pkg package.\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mArgumentError: Module Pkg not found in current path.\nRun `Pkg.add(\"Pkg\")` to install the Pkg package.\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1m_require\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Symbol\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:428\u001b[22m\u001b[22m",
-      " [2] \u001b[1mrequire\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Symbol\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:398\u001b[22m\u001b[22m",
-      " [3] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Install and import Necessary packages\n",
     "using Pkg\n",
@@ -143,11 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-06T15:52:36.972000-06:00",
-     "start_time": "2020-01-06T21:52:36.931Z"
+     "end_time": "2020-02-03T09:52:11.893000-06:00",
+     "start_time": "2020-02-03T15:52:11.888Z"
     }
    },
    "outputs": [],
@@ -344,25 +330,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mcould not open file /Users/tom/Documents/GitHub/Twisted/newsets_utils.jl\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mcould not open file /Users/tom/Documents/GitHub/Twisted/newsets_utils.jl\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1minclude_from_node1\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:569\u001b[22m\u001b[22m",
-      " [2] \u001b[1minclude\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./sysimg.jl:14\u001b[22m\u001b[22m",
-      " [3] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1m./In[3]:9\u001b[22m\u001b[22m [inlined]",
-      " [4] \u001b[1manonymous\u001b[22m\u001b[22m at \u001b[1m./<missing>:?\u001b[22m\u001b[22m",
-      " [5] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-03T11:26:52.208000-06:00",
+     "start_time": "2020-02-03T17:26:51.909Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "symmetric_returns    = 0     # 0 for symmetric return case, 1 for asymmetric returns\n",
     "state_dependent_xi   = 2     # 0 for constant twisting function, 1 for twisting beta_tilde, 2 for twsting kappa_tilde; 1 and 2 are state dependent cases\n",
@@ -370,9 +345,9 @@
     "compute_irfs         = 0     # 1 if one wants to compute irfs, it's fine grid and wold be much more slower\n",
     "\n",
     "if compute_irfs == 1\n",
-    "    @everywhere include(\"newsets_utils.jl\")\n",
+    "    @everywhere include(\"./code_new/newsets_utils.jl\")\n",
     "elseif compute_irfs ==0\n",
-    "    include(\"newsets_utils.jl\")\n",
+    "    include(\"./code_new/newsets_utils.jl\")\n",
     "end\n",
     "\n",
     "println(\"=============================================================\")\n",
@@ -592,21 +567,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: Baseline not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: Baseline not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-03T12:11:55.468000-06:00",
+     "start_time": "2020-02-03T17:26:58.975Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# Initialize model objects -----------------------------------------------------\n",
     "baseline = Baseline(alpha_z_hat, kappa_hat, sigma_z_1cap,\n",
@@ -713,7 +681,7 @@
     "        mu_1_F, mu_1_B, mu_r_F, mu_r_B, mu_z, V0, rr, zz, pii, dr, dz =\n",
     "        value_function_twocapitals(ell_star, model, worrisome,\n",
     "                                    grid, params, symmetric_returns);\n",
-    "one_pii = 1.0- pii\n",
+    "one_pii = 1.0 .- pii\n",
     "println(\"=============================================================\")\n",
     "\n",
     "# Define Policies object\n",
@@ -867,22 +835,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mfunction cumsum does not accept keyword arguments\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mfunction cumsum does not accept keyword arguments\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1mkwfunc\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Any\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./boot.jl:237\u001b[22m\u001b[22m",
-      " [2] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-03T12:19:21.926000-06:00",
+     "start_time": "2020-02-03T18:19:21.567Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "#==============================================================================#\n",
     "# Impulse Response Functions and Term structure of uncertainty prices\n",
@@ -967,21 +927,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: sigma_z_1cap not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: sigma_z_1cap not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:515\u001b[22m\u001b[22m"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-03T12:20:06.074000-06:00",
+     "start_time": "2020-02-03T18:19:23.464Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "results = Dict(\"delta\" => delta,\n",
     "# Single capital\n",
@@ -1054,19 +1007,26 @@
     "\n",
     "npzwrite(\"./data/\" * filename, results)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.6.0",
+   "display_name": "Julia 1.3.1",
    "language": "julia",
-   "name": "julia-0.6"
+   "name": "julia-1.3"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.6.0"
+   "version": "1.3.1"
   },
   "toc": {
    "base_numbering": 1,
